fix: z-index to header

--- a/static/Header.module.scss
+++ b/static/Header.module.scss
@@ -9,6 +9,7 @@
     rgba(0, 101, 169, 1)
   );
   width: 100%;
+  z-index: 1001;
 
   a {
     float: left;
